<resources>
    <string name="app_name">Fasrecon</string>
    <string name="title_home">Home</string>
    <string name="title_menu_1">Clothes Recommendation</string>
    <string name="onboarding_page_image">Onboarding Page Image</string>
    <string name="description_menu_1">Get clothes Recommendation based on chatbat</string>
    <string name="title_menu_2">Integrated Machine Learning</string>
    <string name="description_menu_2">Integrated machine learning with high accuration</string>
    <string name="title_menu_3">Manage Clothes Easily</string>
    <string name="description_menu_3">Classify and manage your clothes easily using machine learning</string>
    <string name="skip">Skip</string>
    <string name="login">Login</string>
    <string name="signup">Signup</string>
    <string name="user_profile">User Profile</string>
    <string name="user_name">Faserecon</string>
    <string name="user_email">Fasrecon@email.com</string>
    <string name="profile_settings">Profile Settings</string>
    <string name="language">Language Settings</string>
    <string name="notification">Notification</string>
    <string name="logout">Logout</string>
    <string name="log_out">Log out</string>
    <string name="cancel_settings">Cancel</string>
    <string name="profile">Profile</string>
    <string name="input_username">Input Username</string>
    <string name="username">Username</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="field_email">Field Email cannot be blank</string>
    <string name="field_password">Field password cannot be blank</string>
    <string name="forgot_password1">Forgot Password ?</string>
    <string name="format_password">The password can\'t be less than 8 characters</string>
    <string name="format_email">The email format is incorrect</string>
    <string name="enter">Enter</string>
    <string name="dont_have_account">Don\'t have an account yet ?</string>
    <string name="sign_up">Signup</string>
    <string name="already_have_an_account">Already have an account?</string>
    <string name="register">Register</string>
    <string name="do_you_agree_with_our_terms">Do you agree with our terms</string>
    <string name="new_password">New Password</string>
    <string name="change">Change</string>
    <string name="date">Date</string>
    <string name="forgot_password">Forgot Password</string>
    <string name="logout_message">Are you sure you want to logout?</string>
    <string name="submit">Submit</string>
    <string name="Placeholder_text">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</string>
    <string name="logout_alert">Logout</string>
    <string name="name">Name</string>
    <string name="save_profile">Save Profile</string>
    <string name="your_clothes_collection">Your Clothes collection</string>
    <string name="color">Color</string>
    <string name="type">Type</string>
    <string name="clothes_name">Clothes name</string>
    <string name="field_username">Field username cannot be blank\n</string>
    <string name="field_gender">field gender cannot be blank</string>
    <string name="field_date">Field Date cannot be blank</string>
    <string name="field_checkbox">please agree with term\n</string>
    <string name="my_clothes">My Clothes</string>
    <string name="chatbot">Chatbot</string>
    <string name="hai_user">Hai, %1$s</string>
    <string name="image_profile_home_page">image profile home page</string>
    <string name="clothes_collection">Clothes Collection</string>
    <string name="clothes_user">%1$s Clothes</string>
    <string name="service">Service</string>
    <string name="chatbot_image">chatbot image</string>
    <string name="camera_image">camera image</string>
    <string name="camera">Camera</string>
    <string name="clothes_image">Clothes Image</string>
    <string name="choose_your_clothes_type">Choose your Clothes type</string>
    <string name="cancel">Cancel</string>
    <string name="apply">Apply</string>
    <string name="filter">Filter</string>
    <string name="settings">Settings</string>
    <string name="profile_settings_icon">Profile Settings Icon</string>
    <string name="language_settings_icon">Language Settings Icon</string>
    <string name="profile_settings_arrow">Settings Arrow</string>
    <string name="notification_settings_icon">Notification Settings Icon</string>
    <string name="logout_icon">Logout Icon</string>
    <string name="add_new_clothes">Add New Clothes</string>
    <string name="take_a_photo">Take Picture</string>
    <string name="gallery">Gallery</string>
    <string name="no_image">No Image Selected</string>
    <string name="failed_take_photo">Failed to take a photo</string>
    <string name="image_profile_settings">Image Profile Settings</string>
    <string name="change_password">Change Password</string>
    <string name="current_password">Current Password</string>
    <string name="new_password_format">*Your new password must be at least\n \ 8 characters</string>
    <string name="fasrecon">Fasrecon</string>
    <string name="english_us">English (US)</string>
    <string name="english_uk">English (UK)</string>
    <string name="indonesia">Indonesia</string>
    <string name="save_settings">Save Settings</string>
    <string name="new_chat">New Chat</string>
    <string name="open_the_chat">Open the chat</string>
    <string name="history_chatbot">History Chatbot</string>
    <string name="user_image">User Image</string>
    <string name="type_here">Type Here</string>
    <string name="success_register">Success Create Account</string>
    <string name="no_internet">No Internet Connection</string>
    <string name="email_registered">Email has been registered</string>
    <string name="unknown_error">Unknown Error</string>
    <string name="wrong_email_password">Email or password is incorrect</string>
    <string name="invalid_user">Account not registered yet</string>
    <string name="too_many_request">Too many login requests, please try again later.</string>
    <string name="session_expired">Session Expired, please login again !</string>
    <string name="change_image">change image</string>
    <string name="failed_update_login_again">Failed to update your profile, please login again</string>
    <string name="current_password_incorrect">Your current password is incorrect</string>
    <string name="delete_clothes">Delete Clothes</string>
    <string name="update_profil_failed">Update Profil Failed</string>
    <string name="change_password_failed">Change Password Failed</string>
    <string name="try_again">Try Again</string>
    <string name="change_password_success">Change Password Success</string>
    <string name="login_failed">Login Failed</string>
    <string name="login_success">Login Success</string>
    <string name="classify_image_failed">Classify Image Failed</string>
    <string name="confirmation_delete">Are you sure want to delete this clothes ?</string>
    <string name="crop_image_failed">Crop Image Failed</string>
    <string name="register_failed">Register Failed</string>
    <string name="create_account_failed">Create Account Failed\n %1$s</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>

    <string name="confirmation_delete_chat">Are you sure want to delete this chat ?</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="delete_chat">Delete Chat</string>
</resources>