<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_home">

    <fragment
        android:id="@+id/navigation_home"
        android:name="com.application.fasrecon.ui.home.HomeFragment"
        android:label="@string/title_home"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/navigation_myclothes"
        android:name="com.application.fasrecon.ui.myclothes.MyClothesFragment"
        android:label="@string/my_clothes"
        tools:layout="@layout/fragment_myclothes" />

    <fragment
        android:id="@+id/navigation_chatbot"
        android:name="com.application.fasrecon.ui.chatbot.ChatbotFragment"
        android:label="@string/chatbot"
        tools:layout="@layout/fragment_chatbot" />

    <fragment
        android:id="@+id/navigation_profile"
        android:name="com.application.fasrecon.ui.setting.SettingsFragment"
        android:label="@string/profile"
        tools:layout="@layout/fragment_settings" />
</navigation>