<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="175dp"
    android:layout_marginStart="16dp"
    android:layout_marginEnd="16dp"
    android:layout_gravity="center"
    android:padding="8dp"
    card_view:cardCornerRadius="16dp"
    android:theme="@style/Theme.Fasrecon_primary">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="175dp"
        android:layout_gravity="center"
        android:padding="16dp">

        <TextView
            android:id="@+id/loguout_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/logout_alert"
            android:textSize="20sp"
            android:textStyle="bold"
            card_view:layout_constraintEnd_toEndOf="parent"
            card_view:layout_constraintStart_toStartOf="parent"
            card_view:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/logout_description"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="12dp"
            android:text="@string/logout_message"
            android:textSize="16sp"
            card_view:layout_constraintEnd_toEndOf="parent"
            card_view:layout_constraintStart_toStartOf="parent"
            card_view:layout_constraintTop_toBottomOf="@id/loguout_title" />

        <Button
            android:id="@+id/btn_cancel"
            style="@style/button_cancel"
            android:layout_marginEnd="8dp"
            android:text="@string/cancel_settings"
            card_view:layout_constraintTop_toTopOf="@id/guideline_horizontal"
            card_view:layout_constraintStart_toStartOf="parent"
            card_view:layout_constraintEnd_toEndOf="@id/guideline_vertical"
            card_view:layout_constraintBottom_toBottomOf="parent" />

        <Button
            android:id="@+id/btn_logout"
            style="@style/button_apply"
            android:layout_marginStart="8dp"
            android:text="@string/log_out"
            card_view:layout_constraintStart_toStartOf="@id/guideline_vertical"
            card_view:layout_constraintEnd_toEndOf="parent"
            card_view:layout_constraintBottom_toBottomOf="parent"
            card_view:layout_constraintTop_toTopOf="@id/guideline_horizontal"/>

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guideline_horizontal"
            android:layout_width="wrap_content"
            android:layout_height="64dp"
            android:orientation="horizontal"
            card_view:layout_constraintEnd_toEndOf="parent"
            card_view:layout_constraintGuide_percent="0.7"
            card_view:layout_constraintStart_toStartOf="parent" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guideline_vertical"
            android:layout_width="wrap_content"
            android:layout_height="64dp"
            android:layout_marginStart="8dp"
            android:orientation="vertical"
            card_view:layout_constraintEnd_toEndOf="parent"
            card_view:layout_constraintGuide_percent="0.5"
            card_view:layout_constraintStart_toStartOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.cardview.widget.CardView>