<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.myclothes.MyClothesFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/background_fragment_activity">

        <com.google.android.material.appbar.AppBarLayout
            style="@style/custom_toolbar_layout"
            android:id="@+id/appbar_layout"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintEnd_toEndOf="parent" >

            <com.google.android.material.appbar.MaterialToolbar
                style="@style/custom_toolbar"
                android:id="@+id/topAppBar"
                app:menu="@menu/appbar_menu" />

        </com.google.android.material.appbar.AppBarLayout>

        <TextView
            android:id="@+id/label_your_clothes_collection"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="24dp"
            android:text="@string/your_clothes_collection"
            android:textColor="@color/black"
            android:textSize="20sp"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/appbar_layout" />

        <ImageView
            android:id="@+id/filter_clothes"
            android:layout_width="32dp"
            android:layout_height="32dp"
            android:layout_marginEnd="24dp"
            android:contentDescription="@string/filter"
            android:src="@drawable/baseline_filter_list_24"
            app:layout_constraintBottom_toBottomOf="@id/label_your_clothes_collection"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="@id/label_your_clothes_collection" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/list_clothes"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginTop="24dp"
            android:layout_marginEnd="20dp"
            android:orientation="horizontal"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/label_your_clothes_collection"
            tools:listitem="@layout/item_clothes_list" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        style="@style/fab_button"
        android:id="@+id/add_clothes_button"
        app:srcCompat="@drawable/baseline_add_24"
        android:contentDescription="@string/add_new_clothes" />

</androidx.coordinatorlayout.widget.CoordinatorLayout>